feat(api): deux relecteurs par exercice, moyenne des notes, note provisoire (closes #25)
- V5 (AJOUTEE, V1-V4 intouchees) : unicite exercice_id supprimee,
  unicite (exercice_id, relecteur_id) ajoutee - la base existante survit, verifie sur Neon
- tirage de 2 relecteurs distincts parmi les presents (RG10) ; fallback 1 si un seul present
- RELU seulement quand TOUS les relecteurs ont rendu (RG22)
- vue auteur : moyenne des notes rendues + noteProvisoire (RG21), relecteur jamais expose
- 3 nouveaux tests (33/33 verts) ; V5 appliquee et verifiee sur PostgreSQL reel